# axum-production-observability

./: Cargo.toml  README.md
src/: lib.rs
src/common/: common.rs  mod.rs
src/logging/: logging.rs  macros.rs  mod.rs
src/metric/: metric.rs  mod.rs
src/middlewares/: middlewares.rs  mod.rs
src/tracing/: mod.rs  tracing.rs
