[package]
name = "axum-production-ready-observability"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"
authors = ["amiscala"]
description = "A implementation of observability for axum using OTLP and Tracing"
readme = "README.md"

[dependencies]
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry = "0.27.1"
opentelemetry-otlp = "0.27.0"
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }
opentelemetry-stdout = "0.27.0"
axum = { version = "0.8.1", features = ["macros"] }
opentelemetry-http = "0.27.0"
http-body-util = "0.1.2"
tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
tracing-core = "0.1.33"
serde_json = "1.0.135"
tracing-subscriber = "0.3.19"
opentelemetry-appender-tracing = { version = "0.27.0"}